# ankipy

./: LICENSE  README.md  setup.cfg
src/ankipy/: ankiconnect.py
