[metadata]
name = ankipy-ahoodatheguy
version = 0.0.1
author = Ahadu Kebede
author_email = ahadukebede@gmail.com
description = A python library for interacting with AnkiConnect.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahoodatheguy/ankipy
project_urls =
    Bug Tracker = https://github.com/ahoodatheguy/ankipy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src